# uc-catalog-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SECURITY.md  databricks.yml  pyproject.toml
.claude/skills/: create-issue.md
.github/workflows/: ci.yml
app/: alembic.ini  app.yaml  embed.py  main.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 001_initial.py
app/db/: client.py  models.py
app/tools/: describe.py  lineage.py  list.py  search.py
integration/: test_embeddings.py  test_lineage.py  test_sync_job.py
migrations/: 001_initial.sql
resources/: app.yml  job.yml  lakebase.yml
scripts/: deploy.sh  migrate.py
sync/: config.py  db.py  embeddings.py  hash.py  job.py  spark.py  types.py
tests/: test_db_client.py  test_deploy.py  test_embed.py  test_health.py  test_models.py  test_tool_describe.py  test_tool_lineage.py  test_tool_list.py  test_tool_search.py
tests/sync/: test_embeddings.py  test_hash.py  test_sync_config.py  test_sync_db.py  test_sync_job.py
