[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-catalog-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "psycopg[binary]>=3.1",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "databricks-sdk>=0.78",
]

[project.scripts]
uc-catalog-sync = "sync.job:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
    "databricks-connect==18.0.5",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "sync*"]

[tool.ruff]
line-length = 100
